Moving to SECOMLib version 0.0.10